plugins {
    id 'com.android.library'
    id 'org.jetbrains.kotlin.android' version '1.9.0'
}
apply from: "${rootDir}/gradle/publish.gradle"

android {
    namespace 'com.fjuul.sdk.activitysources'
    compileSdk rootProject.ext.compileSdk

    defaultConfig {
        minSdk rootProject.ext.minSdk
        compileSdk rootProject.ext.compileSdk
        targetSdk rootProject.ext.targetSdk

        versionCode 1
        versionName "1.0"

        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
        consumerProguardFiles "consumer-rules.pro"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    kotlinOptions {
        jvmTarget = '17'
    }
    testOptions {
        unitTests {
            includeAndroidResources = true
        }
    }
    publishing {
        // Android Gradle plugin
        singleVariant("release")
    }
}

tasks.withType(Javadoc) {
    excludes = ['**/*.kt']
    options.addStringOption('Xdoclint:none', '-quiet')
}

dependencies {
    def workVersion = "2.10.0"

    implementation "androidx.annotation:annotation:$rootProject.ext.androidXAnnotationVersion"
    implementation "androidx.core:core:$rootProject.ext.androidXCoreVersion"

    // Kotlin
    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.0"

    // HealthConnect dependencies
    implementation "androidx.health.connect:connect-client:1.1.0-alpha12"
    implementation 'com.google.android.gms:play-services-auth:21.3.0'
    implementation 'com.google.android.gms:play-services-fitness:21.1.0'
    implementation "androidx.work:work-runtime:$workVersion"
    implementation "com.google.guava:guava:32.1.3-android"
    implementation "androidx.concurrent:concurrent-futures:1.1.0"

    // TODO: specify an exact version for the Core package
    api project(':core')

    // Use JUnit test framework
    testImplementation "junit:junit:$rootProject.ext.junitVersion"
    testImplementation 'org.mockito:mockito-core:5.10.0'
    testImplementation('org.mockito:mockito-inline:5.2.0')
    testImplementation "com.squareup.okhttp3:mockwebserver:$rootProject.ext.okHttpVersion"
    testImplementation "androidx.work:work-testing:$workVersion"
    testImplementation project(':test')

    testImplementation "org.robolectric:robolectric:$rootProject.ext.robolectricVersion"
    testImplementation 'org.hamcrest:hamcrest:2.2'
    testImplementation "androidx.test:core:$rootProject.ext.androidXTestCoreVersion"
}
